JSLintMate
==========

* IMPROVEMENT: Hid ugly internal URLs when hovering over problem items in
  TextMate 2.


1.3 (2012-03-05)
----------------
* FEATURE: Added support for TextMate 2.
* FEATURE: Added support for JSON options files, not just YAML.
* FEATURE: Added example options files (e.g., `jslint.json`, `jshint.yml`) to
  the repository.
* FEATURE: Added a problem list preview to the tooltip that appears when saving
  JS files.
* FEATURE: Added a setting for disabling warnings about unused variables.
* FEATURE: Added menu commands: "About JSLintMate", "Help", and "Report a Bug".
* IMPROVEMENT: In the problem list, made the hover state more subtle (to better
  bring attention to the blue "current" state), and added an active state.
* IMPROVEMENT: Changed *up* key behavior to better mimic the standard OS X
  behavior for keyboard navigation in menus, the Finder, etc.
* IMPROVEMENT: Added *escape* as keyboard shortcut for unhighlighting the
  current item in the problem list.
* IMPROVEMENT: Revamped showing warnings and errors about invalid options files
  and other preferences. Includes deprecation warnings for old `--linter-file`
  and similar switches; the bundle's preferences should be used instead.
* IMPROVEMENT: Upgraded to JSLint 2012-03-02 and JSHint 2012-02-13 (r06).
* FIX: Fixed version notification to not cache the last result. This allows a
  freshly updated copy of the bundle to know that it matches the latest reported
  version.


1.2 (2011-12-17)
----------------
* FEATURE: Added a tooltip that appears whenever you save a JS file that has
  problems.
* FEATURE: Added bundle preferences -- a much simpler and more robust way to
  customize JSLintMate behavior. Use these instead of modifying the bundle
  commands themselves.
* FEATURE: Added support for detecting unused variables.
* FEATURE: Added notification when a new version of JSLintMate is available.
* IMPROVEMENT: Upgraded to JSLint 2011-11-03 and JSHint 2011-09-29.